[package]
name = "if-watch"
version = "0.3.0"
authors = ["David Craven <david@craven.ch>", "Parity Technologies Limited <admin@parity.io>"]
edition = "2018"
keywords = ["asynchronous", "routing"]
license = "MIT OR Apache-2.0"
description = "crossplatform asynchronous network watcher"
repository = "https://github.com/dvc94ch/if-watch"

[dependencies]
futures-lite = "1.11.3"
ipnet = "2.3.0"
libc = "0.2.86"
log = "0.4.14"

[target.'cfg(not(windows))'.dependencies]
async-io = "1.3.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
if-addrs = "0.7.0"

[target.'cfg(windows)'.dependencies]
futures = { version = "0.3.13", default-features = false }
winapi = { version = "0.3.9", features = ["netioapi", "ntdef", "winerror", "ws2def"] }

[dev-dependencies]
env_logger = "0.9.0"
